--- a/index.html
+++ b/index.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!--link href="./DataTables/datatables.min.css" rel="stylesheet"-->
 <link rel="stylesheet" href="./lib/css/layout.css">
-<link rel="stylesheet" href="./lib/css/jquery-ui.min.css">
+<!--link rel="stylesheet" href="./lib/css/jquery-ui.min.css">
 <link href="./DataTables/DataTables-1.13.4/css/dataTables.jqueryui.css" rel="stylesheet"/>
-<link href="./DataTables/Buttons-2.3.6/css/buttons.jqueryui.css" rel="stylesheet">
+<link href="./DataTables/Buttons-2.3.6/css/buttons.jqueryui.css" rel="stylesheet"-->
+
+<link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/themes/base/jquery-ui.min.css" rel="stylesheet"/>
+<link href="https://cdn.datatables.net/v/ju/jq-3.6.0/jszip-2.5.0/dt-1.13.4/b-2.3.6/b-colvis-2.3.6/b-html5-2.3.6/b-print-2.3.6/cr-1.6.2/datatables.min.css" rel="stylesheet"/>
+ 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/pdfmake.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js"></script>
+<script src="https://cdn.datatables.net/v/ju/jq-3.6.0/jszip-2.5.0/dt-1.13.4/b-2.3.6/b-colvis-2.3.6/b-html5-2.3.6/b-print-2.3.6/cr-1.6.2/datatables.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
+
+
+
+<!--script type="text/javascript" src="./lib/js/jquery-latest.js"></script>
+<script src="./DataTables/datatables.min.js"></script>
+<script type="text/javascript" src="./lib/js/jquery-ui-latest.js"></script-->
 
 <!--link href="./DataTables/datatables.min.css" rel="stylesheet"/-->
  
-<script src="./DataTables/datatables.min.js"></script>
-<script type="text/javascript" src="./lib/js/jquery-ui-latest.js"></script>
+<!--script src="./DataTables/datatables.min.js"></script-->
+
 <script type="text/javascript" src="./lib/js/d3.v7.min.js"></script>
 
 <script type="text/javascript" src="./lib/js/vsam.js"></script>
