Update to support Job filtering

--- a/index.html
+++ b/index.html
@@ -142,6 +142,8 @@
         <input id="regexInclude" name="regexInclude" type="text" value="^[A-Z0-9]"/></div>
       <div style="display:flex"><label for="regexExclude">Regex exclude:</label>
         <input id="regexExclude" name="regexExclude" type="text"/></div>
+        <div style="display:flex"><label for="regexJob">Job Regex include:</label>
+          <input id="regexJob" name="regexJob" type="text"/></div> 
       <div style="display:flex"><label for="startTime">Start Time:</label>
         <input id="startTime" name="startTime" class="form-control"/></div>
       <div style="display:flex"><label for="finishTime">Finish Time:</label>
