--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
   <!--a href="#" onclick="downloadJSON()">Save</a-->
   <a href="#" onclick="$('#csv').trigger('click')">Load Files</a>
   <!--a href="#" onclick="loadJSON()">Load</a-->
-  <a href="#" onclick="screenShot()">Screenshot</a>
-  <a href="#" onclick="generateReport(false)">Report by Job</a>
-  <a href ="#" onclick="generateReport(true)">Detailed Report</a>
+  <!--a href="#" onclick="screenShot()">Screenshot</a-->
+  <!--a href="#" onclick="generateReport(false)">Report by Job</a-->
+  <!--a href ="#" onclick="generateReport(true)">Detailed Report</a-->
   <!--a href="#" onclick="sortTables('accessRateAve', 100)">Sort by avg</a-->
   <!--a href="#" onclick="sortTables('accessRateMax',100)">Sort by max</a-->
   <a href="help.html" rel="modal:open" class="modal" style="float:right">Help</a>
